# access-needs-agent

./: .env.example  .gitignore  README.md  business_logic.py  config.yaml  process_pending.py  pyproject.toml  srt_validation.py
Backend/: README.md
Backend/intern_code/: business_logic.py
Backend/output/: session_0051df40_Speaker_A.srt
Backend/pending/: session_4fd5fc90_unified.srt
Backend/scripts/: test_mic.py
Client/: package-lock.json
Client/src/: App.css  App.tsx  index.css
Server/: README.md  pyproject.toml
Server/intern_code/: openai_service.py
Server/intern_code/input/failed/: bad_seq_not_sequential.srt  bad_time_range_end_before_start.srt
Server/scripts/: generate_test_wav.py
Server/src/api_server/: __init__.py  app.py
Server/src/pipeline/: config.py
Server/src/pipeline/asr/: base.py
Server/src/pipeline/audio/: splitter.py
Server/src/pipeline/transcript/: downmix.py  per_speaker.py  vad_hook.py
Server/src/watcher/: openai_service.py  process_pending.py
Server/tests/: conftest.py  test_downmix.py  test_srt_writer.py
input/failed/: bad_empty_caption_text.srt  bad_missing_speaker_tag.srt  bad_seq_not_integer.srt
input/pending/: session_sess_4aa0de.srt  session_sess_9f1c2a_chunk_002.json  session_sess_c31d0f.srt
input/processed/: session_sess_9f1c2a_chunk_001.json  session_sess_9f1c2a_chunk_003.json  session_sess_b7a813.srt  session_sess_b7a813_chunk_001.json  session_sess_b7a813_chunk_002.json  session_sess_b7a813_chunk_003.json
intern_code/: pending_watcher.py  process_pending.py  srt_validation.py
tests/: test_splitter.py
(+19 files in other folders)
